@@ -1,6 +1,7 @@
 = ActiveMerchant CHANGELOG
 
 * Add FirstData Global Gateway e4 [frobcode]
+* PaymentExpress: Add support for optional fields: ClientType and TxnData [moklett]
 
 == Version 1.29.3 (December 7, 2012)
 
